update: 更新文件 快速入门.md

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -193,7 +193,7 @@ open-eBackup工程有3个，分别是：REST\_API、open-source-obligation、GUI
 3.  执行以下命令下载open-eBackup引擎源码。
 
     ```
-    git clone https://gitee.com/openeuler/open-eBackup.git
+    git clone https://Gitcode.com/eBackup/open-eBackup.git
     ```
 
 4.  创建open-eBackup-bin目录存放二进制文件。
@@ -207,7 +207,7 @@ open-eBackup工程有3个，分别是：REST\_API、open-source-obligation、GUI
 5.  执行以下命令下载open-eBackup所依赖的GUI源码。
 
     ```
-    git clone https://gitee.com/openeuler/LiveUI.git
+    git clone https://Gitcode.com/eBackup/LiveUI.git
     ```
 
     按照LiveUI的指导编译LiveUI，生成二进制包@iux，并拷贝@iux包到open-eBackup-bin目录下。
