Match-id-57fd64302678fc614869782121e43a633a3ae7d3

--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/en-us/common.json
@@ -589,7 +589,7 @@
   "common_same_table_to_namespace_label": "Tables with the same name cannot be restored to the same namespace.",
   "common_format_error_label": "The file format is incorrect. Only the {0} format is supported.",
   "common_max_size_file_label": "The maximum file size is {0}.",
-  "common_valid_backup_proxy_file_label": "The file name must be OceanProtect_DataProtect_@{product.version.formal}_client.zip.",
+  "common_valid_backup_proxy_file_label": "The file name must be OceanProtect_DataProtect_1.6.RC2_client.zip.",
   "common_copy_count_label": "Copies in Total",
   "common_two_colon_label": "{0}: {1}",
   "common_param_comma_param_label": "{0}, {1}",
@@ -848,10 +848,10 @@
   "common_browser_zoom_label": "Optimize display by setting your OS and browser zoom to 100%:<br>1. Windows 7: Go to Control Panel > Display.For other operating systems, perform operations based on the site requirements.<br>2. Major browsers: Press Ctrl+0 (Windows) or Command+0 (macOS).",
   "common_ignore_continue_label": "Ignore and Continue",
   "common_location_ip_label": "Location/IP Address",
-  "common_product_version_label": "OceanProtect DataBackup @{product.version.formal}",
+  "common_product_version_label": "OceanProtect DataBackup 1.6.RC2",
   "common_oceancyber_product_version_label": "OceanCyber 300 1.2.RC2",
-  "common_whitebox_product_version_label": "{0} @{product.version.formal}",
-  "common_agent_file_label": "OceanProtect_DataProtect_@{product.version.formal}_client.zip",
+  "common_whitebox_product_version_label": "{0} 1.6.RC2",
+  "common_agent_file_label": "OceanProtect_DataProtect_1.6.RC2_client.zip",
   "common_open_version_label": "open-eBackup 1.0.0",
   "common_abort_failed_label": "Stop Failed",
   "common_file_path_label": "File Path",
