--- a/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/common.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/src/assets/i18n/zh-cn/common.json
@@ -588,7 +588,7 @@
   "common_same_table_to_namespace_label": "相同表名的表不可恢复到同一命名空间下",
   "common_format_error_label": "文件格式不正确，只支持{0}格式。",
   "common_max_size_file_label": "文件最大为{0}。",
-  "common_valid_backup_proxy_file_label": "文件名必须是OceanProtect_DataProtect_@{product.version.formal}_client.zip",
+  "common_valid_backup_proxy_file_label": "文件名必须是OceanProtect_DataProtect_1.6.RC2_client.zip",
   "common_copy_count_label": "副本总数",
   "common_two_colon_label": "{0}：{1}",
   "common_param_comma_param_label": "{0}，{1}",
@@ -850,10 +850,10 @@
   "common_browser_zoom_label": "当前浏览器缩放比例或系统显示比例不为100%。为保证显示正常，请确认以下两点：<br>1、操作系统显示比例设置为100%（Windows 7通过“控制面板 > 显示”设置，其他操作系统请根据实际界面操作。）<br>2、浏览器缩放比例设置为100%（在大部分浏览器中可按“Ctrl+0”（Windows）或“Command+0”（MAC OS）组合键快速设置）。",
   "common_ignore_continue_label": "忽略并继续",
   "common_location_ip_label": "位置/IP地址",
-  "common_product_version_label": "OceanProtect DataBackup @{product.version.formal}",
+  "common_product_version_label": "OceanProtect DataBackup 1.6.RC2",
   "common_oceancyber_product_version_label": "OceanCyber 300 1.2.RC2",
-  "common_whitebox_product_version_label": "{0} @{product.version.formal}",
-  "common_agent_file_label": "OceanProtect_DataProtect_@{product.version.formal}_client.zip",
+  "common_whitebox_product_version_label": "{0} 1.6.RC2",
+  "common_agent_file_label": "OceanProtect_DataProtect_1.6.RC2_client.zip",
   "common_open_version_label": "open-eBackup 1.0.0",
   "common_abort_failed_label": "停止失败",
   "common_file_path_label": "文件路径",
