Match-id-99e7ddaade57894f4cfb3e2cc95cc438671961c3

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -104,6 +104,10 @@ open-eBackup工程有3个，分别是：REST\_API、open-source-obligation、GUI
 
     -   OpenEuler-22.03-LTS\(aarch64\)
 
+    下载地址：
+
+    https://www.openeuler.org/en/download/archive/detail/?version=openEuler%2022.03%20LTS%20SP1
+
 1.  软件要求
 
     open-eBackup引擎编译过程所依赖的软件如[表1](#table4754929184717)所示。
@@ -193,47 +197,64 @@ open-eBackup工程有3个，分别是：REST\_API、open-source-obligation、GUI
 3.  执行以下命令下载open-eBackup引擎源码。
 
     ```
-    git clone https://gitee.com/openeuler/open-eBackup.git
+    git clone https://gitcode.com/eBackup/open-eBackup.git
     ```
 
-4.  创建open-eBackup-bin目录存放二进制文件。
+4.  联系华为工程师下载open-eBackup-bin并解压到当前目录。
+5.  下载openEuler到open-eBackup-bin目录下。
+
+    下载地址为：
 
     ```
-    mkdir open-eBackup-bin
+    https://repo.openeuler.org/openEuler-22.03-LTS/docker_img/aarch64/openEuler-docker.aarch64.tar.xz
     ```
 
-    下载open-eBackup开放的二进制到open-eBackup-bin目录下。
+6.  下载openGauss到open-eBackup-bin目录
 
-5.  执行以下命令下载open-eBackup所依赖的GUI源码。
+    下载地址为：
 
     ```
-    git clone https://gitee.com/openeuler/LiveUI.git
+    https://opengauss.obs.cn-south-1.myhuaweicloud.com/5.0.0/arm_2203/openGauss-Lite-5.0.0-openEuler-aarch64.tar.gz
     ```
 
-    按照LiveUI的指导编译LiveUI，生成二进制包@iux，并拷贝@iux包到open-eBackup-bin目录下。
+7.  下载openGauss-Server和openGauss-connector-python-psycopg2到open-eBackup-bin目录下。
 
-6.  下载openEuler到open-eBackup-bin目录下。
+    openGuass-Server下载地址为：
 
-    下载地址为：https://repo.openeuler.org/openEuler-22.03-LTS/docker\_img/aarch64/openEuler-docker.aarch64.tar.xz
+    ```
+    https://gitee.com/opengauss/openGauss-server/repository/archive/v5.0.0
+    ```
 
-    下载openGauss到open-eBackup-bin目录下。
+    参考如下地址进行编译：
 
-7.  下载地址为：[https://opengauss.obs.cn-south-1.myhuaweicloud.com/5.0.0/arm\_2203/openGauss-Lite-5.0.0-openEuler-aarch64.tar.gz](https://opengauss.obs.cn-south-1.myhuaweicloud.com/5.0.0/arm_2203/openGauss-Lite-5.0.0-openEuler-aarch64.tar.gz)
-8.  下载openGauss-Server和openGauss-connector-python-psycopg2到open-eBackup-bin目录下。
+    ```
+    https://gitee.com/opengauss/openGauss-server#%E4%BD%BF%E7%94%A8buildsh%E7%BC%96%E8%AF%91%E4%BB%A3%E7%A0%81
+    ```
 
-    openGuass-Server下载地址为：[https://gitee.com/opengauss/openGauss-server/repository/archive/v5.0.0](https://gitee.com/opengauss/openGauss-server/repository/archive/v5.0.0)
+    openGauss-connector-python-psycopg2下载地址为：
 
-    参考如下地址进行编译：[https://gitee.com/opengauss/openGauss-server\#%E4%BD%BF%E7%94%A8buildsh%E7%BC%96%E8%AF%91%E4%BB%A3%E7%A0%81](https://gitee.com/opengauss/openGauss-server#%E4%BD%BF%E7%94%A8buildsh%E7%BC%96%E8%AF%91%E4%BB%A3%E7%A0%81)
+    ```
+    https://gitee.com/opengauss/openGauss-connector-python-psycopg2/tree/v5.0.0
+    ```
 
-    openGauss-connector-python-psycopg2下载地址为：[https://gitee.com/opengauss/openGauss-connector-python-psycopg2/tree/v5.0.0](https://gitee.com/opengauss/openGauss-connector-python-psycopg2/tree/v5.0.0)
+    参考如下地址进行编译：
 
-    参考如下地址进行编译：[https://gitee.com/opengauss/openGauss-connector-python-psycopg2](https://gitee.com/opengauss/openGauss-connector-python-psycopg2)，生成openGauss-5.0.0-openEuler-aarch64-Python.tar.gz文件。将该文件拷贝到open-eBackup-bin目录下。
+    ```
+    https://gitee.com/opengauss/openGauss-connector-python-psycopg2
+    ```
+
+    生成openGauss-5.0.0-openEuler-aarch64-Python.tar.gz文件。将该文件拷贝到open-eBackup-bin目录下。
 
 ### 准备容器镜像<a name="ZH-CN_TOPIC_0000001982077300"></a>
 
 **操作步骤<a name="section5812195513530"></a>**
 
-1.  下载openEuler镜像，下载地址为：[https://mirrors.aliyun.com/openeuler/openEuler-22.03-LTS/docker\_img/aarch64/openEuler-docker.aarch64.tar.xz](https://mirrors.aliyun.com/openeuler/openEuler-22.03-LTS/docker_img/aarch64/openEuler-docker.aarch64.tar.xz)
+1.  下载openEuler镜像，下载地址为：
+
+    ```
+    https://mirrors.aliyun.com/openeuler/openEuler-22.03-LTS/docker_img/aarch64/openEuler-docker.aarch64.tar.xz
+    ```
+
 2.  导入基础镜像。
 
     ```
@@ -243,13 +264,13 @@ open-eBackup工程有3个，分别是：REST\_API、open-source-obligation、GUI
 3.  执行以下命令切换目录。
 
     ```
-    cd /open-eBackup/Infrastructure_OM/build/baseImage/dockerfiles/
+    cd /open-eBackup/open-eBackup/build
     ```
 
 4.  执行以下命令构建编译镜像。
 
     ```
-    docker build . -f compiler.dockerfile -t openeuler-22.03-lts:devel
+    sh build_compile_container.sh
     ```
 
 5.  执行以下命令查询编译镜像。
