Match-id-feecfb64498905ff4aa6a3dae201d11011fd5394

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -293,7 +293,7 @@ open-eBackup工程有3个，分别是：REST\_API、open-source-obligation、GUI
 1.  执行以下命令启动编译容器。
 
     ```
-    docker run -it --name open-ebackup -v /open-eBackup:/open-eBackup -v /var/run/docker.sock:/var/run/docker.sock -v /usr/local/bin/helm:/usr/bin/helm -v /usr/bin/docker:/usr/bin/docker openeuler-22.03-lts:devel /bin/bash
+    docker run -it --name open-ebackup -v /open-eBackup:/open-eBackup -v /var/run/docker.sock:/var/run/docker.sock -v /usr/local/bin/helm:/usr/bin/helm -v /usr/bin/docker:/usr/bin/docker open-ebackup:devel /bin/bash
     ```
 
 2.  在容器中执行以下命令切换路径。
