--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -220,7 +220,7 @@ open-eBackup工程中包含3个重要的目录：
     ```
     https://nodejs.org/dist/v18.20.1/node-v18.20.1-linux-arm64.tar.xz
     tar -xvJf node-v18.20.1-linux-arm64.tar.xz
-    mv node-v18.20.1-linux-arm64 nodejs
+    mv node-v18.20.1-linux-arm64 open-eBackup-bin/nodejs
     ```
 
 6.  下载openEuler到open-eBackup-bin目录下。
