更新下载二进制说明
Signed-off-by: zgqhope <zgqhope@163.com>

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -206,7 +206,7 @@ open-eBackup工程中包含3个重要的目录：
     git clone https://gitcode.com/eBackup/open-eBackup.git
     ```
 
-4.  下载open-eBackup-bin.tgz到当前目录并解压。
+4.  下载open-eBackup-bin.tgz到当前目录并解压（在社区版本未正式发布前，可向openebackup@163.com邮箱发送二进制下载申请）。
 
     ```
     mkdir -p open-eBackup-bin
