Match-id-a94dfc77b2e5e019000b34853f452e8a03f59298

--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -1200,7 +1200,19 @@ Traefik的安装请参考Traefik官方文档安装，配置参数请关注如下
     kubectl get pods -n dpa
     ```
 
-4.  卸载
+4.  更新cm infrastructure-conf 资源
+
+    ```
+    kubectl edit cm infrastructure-conf -n dpa -oyaml
+    ```
+    在database.updateTime后加入一行：
+
+    ```
+    master: 管理IP,master0
+    ```
+    master是节点名，8.40.117.214是管理IP
+
+5.  卸载
 
     ```
     helm uninstall master-server -n dpa
