--- a/doc/quick_guide/快速入门.md
+++ b/doc/quick_guide/快速入门.md
@@ -206,7 +206,7 @@ open-eBackup工程中包含3个重要的目录：
     git clone https://gitcode.com/eBackup/open-eBackup.git
     ```
 
-4.  下载[open-eBackup-bin.tgz]https://support.huawei.com/carrier/navi?coltype=software#col=software&from=product&detailId=PBI1-264670844&path=PBI1-262732232/PBI1-262732236/PBI1-261607562/PBI1-251366310/PBI1-258115661)到当前目录并解压。
+4.  下载[open-eBackup-bin.tgz]https://support.huawei.com/enterprise/zh/flash-storage/oceanprotect-databackup-pid-258115661/software/264670844)到当前目录并解压。
     备注：如前期增加过下载白名单，可直接下载；如前期未增加下载白名单，则需向openebackup@163.com发送下载申请，并提供华为support账号
     ```
     mkdir -p open-eBackup-bin
